panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__initialisation__test_error_braced_init_of_invalid_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/initialisation/test_error_braced_init_of_invalid_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/initialisation/test_error_braced_init_of_invalid_type.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration t~3 `struct T~2` (braced ∅))
         (declaration v~4 `void`
            (braced
               1
               2
               3))
         (declaration f~5 `fn() -> int`
            (braced
               42)))))

----- stderr -----
